RESOLVED FIXED27888
Geolocation clean up when no longer updating
https://bugs.webkit.org/show_bug.cgi?id=27888
Summary Geolocation clean up when no longer updating
Greg Bolsinga
Reported 2009-07-31 10:22:48 PDT
When Geolocation::disconnectFrame() is called, need to call Document::setUsingGeolocation(false) to mirror the true call when it is set up. When handling an error, and there are no more listeners, call GeolocationService::stopUpdating().
Attachments
patch to implement bug fix (2.46 KB, patch)
2009-07-31 10:25 PDT, Greg Bolsinga
eric: review+
Greg Bolsinga
Comment 1 2009-07-31 10:25:14 PDT
Created attachment 33886 [details] patch to implement bug fix
Eric Seidel (no email)
Comment 2 2009-07-31 14:35:08 PDT
Comment on attachment 33886 [details] patch to implement bug fix Any way to test this? We really need some sort of geolocationController for DumpRenderTree it seems.
Greg Bolsinga
Comment 3 2009-07-31 14:50:44 PDT
(In reply to comment #2) > (From update of attachment 33886 [details]) > Any way to test this? We really need some sort of geolocationController for > DumpRenderTree it seems. Bug 21717 was to get those tests in. Thanks!
Greg Bolsinga
Comment 4 2009-07-31 14:57:43 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/page/Geolocation.cpp Committed r46642
Note You need to log in before you can comment on or make changes to this bug.