2009-07-31  Greg Bolsinga  <bolsinga@apple.com>

Reviewed by Eric Seidel.

        Geolocation clean up when no longer updating
        https://bugs.webkit.org/show_bug.cgi?id=27888

        When Geolocation::disconnectFrame() is called, need to call
        Document::setUsingGeolocation(false) to mirror the true call
        when it is set up.

        When handling an error, and there are no more listeners, call
        GeolocationService::stopUpdating().

        * page/Geolocation.cpp:
        (WebCore::Geolocation::disconnectFrame):
        (WebCore::Geolocation::handleError):

Canonical link: https://commits.webkit.org/38248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46642 268f45cc-cd09-0410-ab3c-d52691b4dbfc