WebCore/page/Geolocation.cpp
@@ -73,6 +73,8 @@ Geolocation::Geolocation(Frame* frame)
 void Geolocation::disconnectFrame()
 {
     m_service->stopUpdating();
+    if (m_frame && m_frame->document())
+        m_frame->document()->setUsingGeolocation(false);
     m_frame = 0;
 }
 
@@ -242,6 +244,9 @@ void Geolocation::handleError(PositionError* error)
     sendErrorToWatchers(error);
 
     m_oneShots.clear();
+
+    if (!hasListeners())
+        m_service->stopUpdating();
 }
 
 void Geolocation::requestPermission()
